test: add AST assertion tests for each Statement type